# colossus-legal

./: .gitignore  AGENTS.md  AUDIT_PIPELINE_CONFIG_GAPS.md  CLAUDE.md  CODEX.md  COLOSSUS-CC-STANDARDS.md  DATABASE_ACCESS_AUDIT_RESULTS.md  Dockerfile-save  Makefile  PIPELINE_CODEBASE_AUDIT.md  PIPELINE_RESILIENCE_AUDIT_v1.md  README.md  docker-compose.yml  start_task_branch.sh
backend/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/.cargo/: cargo-config.toml
backend/canonical_elements/: count_1_breach_of_fiduciary_duty.yaml  count_2_fraud.yaml  count_3_declaratory_relief.yaml  count_4_abuse_of_process.yaml
backend/config/: models.yaml  pipeline_registry.yaml
backend/extraction_schemas/: affidavit.yaml  affidavit_schema_v5_1.yaml  affidavit_v4.yaml  appellate_brief_schema_v5_3.yaml  brief.yaml  brief_v4.yaml  complaint.yaml  complaint_schema_v5_1.yaml  complaint_v2.yaml  complaint_v4.yaml  complaint_v5.yaml  correspondence_schema_v5_3.yaml  court_ruling.yaml  court_ruling_schema_v5_2.yaml  court_ruling_v4.yaml  court_transcript_schema_v5_3.yaml  discovery_response.yaml  discovery_response_schema_v5_1.yaml  discovery_response_v4.yaml  general_legal.yaml  motion.yaml  motion_schema_v5_3.yaml  motion_v4.yaml
backend/extraction_schemas/superseded/: court_ruling_v4.yaml
backend/extraction_templates/: affidavit_pass1_v5_1.md  affidavit_pass1_v5_3.md  affidavit_pass2_v5_1.md  appellate_brief_pass1_v5_3.md  appellate_brief_pass2_v5_3.md  chunk_extract.md  complaint_pass1_v5_1.md  complaint_pass1_v5_3.md  complaint_pass2_v5_1.md  correspondence_pass1_v5_3.md  correspondence_pass2_v5_3.md  court_ruling_pass1_v5_2.md  court_ruling_pass1_v5_3.md  court_ruling_pass2_v5_2.md  court_ruling_pass2_v5_3.md  court_transcript_pass1_v5_3.md  court_transcript_pass2_v5_3.md  discovery_response_pass1_v5_1.md  discovery_response_pass1_v5_3.md  discovery_response_pass2_v5_1.md  discovery_response_pass2_v5_2.md  discovery_response_pass2_v5_3.md  global_rules.md  global_rules_v4.md  legal_extraction_system.md  motion_pass1_v5_3.md  motion_pass2_v5_3.md  pass1_affidavit_v4.md  pass1_brief_v4.md  pass1_complaint.md  pass1_complaint_v4.md  pass1_complaint_v5.md  pass1_court_ruling_v4.md  pass1_discovery_response_v4.md  pass1_template.md  pass2_affidavit_v4.md  pass2_brief_v4.md  pass2_complaint_v4.md  pass2_complaint_v5.md  pass2_court_ruling_v4.md  (+3 more)
backend/extraction_templates/guides/: EXTRACTION_TEMPLATE_CONSTRUCTION_GUIDE_v2.md  LLM_PROMPT_ENGINEERING_LEGAL_RESEARCH_v2.md
backend/migrations/: 20260308000000_create_qa_ratings.sql  20260315000000_create_qa_entries.sql  20260324000000_v2_phase1_tables.sql  20260324100000_audit_verifications_add_notes.sql  20260524095049_case_metadata_tables.sql
backend/migrations_neo4j/: 001_add_document_status.cypher
backend/pipeline_migrations/: 20260327000000_create_pipeline_tables.sql  20260401_create_pipeline_steps.sql  20260402_known_users_and_reviewer.sql  20260403_create_document_audit_log.sql  20260410_f3_reproducibility_columns.sql  20260411_f5_review_edit_history.sql  20260412_fp7_chunk_extraction.sql  20260413_ps_process_endpoint.sql  20260413b_ps_status_migration.sql  20260415_fix_complaint_schema.sql  20260416_add_step_config_to_pipeline_config.sql  20260416_create_rag_config.sql  20260417_create_pipeline_jobs_and_events.sql  20260420143625_add_document_content_classification.sql  20260420_config_system.sql  20260421212806_add_neo4j_node_id_to_extraction_items.sql  20260421214108_add_resolved_entity_type_to_extraction_items.sql  20260421_config_system_addl.sql  20260422112238_sync_document_status_from_pipeline_job_terminal.sql  20260422113610_add_unique_constraint_on_extraction_runs_document_and_pass.sql  20260422214842_add_pass2_extraction_model_column.sql  20260428213218_add_chunk_metadata_column.sql  20260430103319_add_document_mime_type_and_original_format.sql  20260502152704_add_chunking_config_and_context_config_overrides.sql  20260505134618_add_pass2_template_file_and_schema_override.sql  20260509162937_add_verification_reason_column.sql  20260513_consolidate_model_columns_and_add_overrides.sql  20260519130207_add_restate_invocation_id_to_documents.sql  20260526133731_drop_dead_schema_surfaces.sql  20260526141630_create_authored_entity_tables.sql  20260527130531_add_document_id_to_authored_relationships.sql  20260528075029_add_review_notes_to_authored_entities.sql  20260626115557_create_scenarios_table.sql  20260626122424_create_scenario_fact_refs_table.sql  20260626135022_create_scenario_responses_tables.sql  20260705153520_refresh_scenarios_definition_column_comment.sql  20260706112745_add_confidence_to_scenario_fact_refs.sql  20260706162558_replace_confirmed_with_status_on_scenario_fact_refs.sql  20260708084245_llm_config_params.sql  20260715121130_create_scan_runs_and_verdicts.sql  (+5 more)
backend/profiles/: affidavit.yaml  appellate_brief_v5_3.yaml  brief.yaml  complaint.yaml  complaint_profile_v5_1.yaml  complaint_v5.yaml  complaint_v5_1.yaml  correspondence_v5_3.yaml  court_ruling.yaml  court_transcript_v5_3.yaml  default.yaml  discovery_response.yaml  discovery_response.yaml_v4  motion.yaml  motion_v5_3.yaml  profile_complaint_v5.yaml
backend/src/: auth.rs  cli.rs  config.rs  database.rs  error.rs  lib.rs  llm_retry.rs  main.rs  main.rs.bak  neo4j.rs  prompt_loader.rs  restate_endpoint.rs  state.rs
backend/src/api/: ask.rs  (+48 more)
backend/tests/: authored_entities_integration.rs  bias_repository_integration.rs  canonical_elements_loader_tests.rs  canonical_loader_postgres_integration.rs  claims_list.rs  claims_validation.rs  cleanup_integration.rs  completeness_validation.rs  context_loader_integration.rs  document_delete_integration.rs  documents_list.rs  documents_validation.rs  human_facts_integration.rs  import_validate.rs  pipeline_registry_invariants.rs  processing_profiles_load.rs  scan_run_history_integration.rs  scenario_traversals_integration.rs  scenarios_integration.rs  test_documents_recent.rs
tools/document-processor/: CLAUDE.md  Cargo.toml  README.md  README.md-SAVE  config.toml  install.sh
(+583 files in other folders)
