[package]
name = "colossus-legal-backend"
version = "2.0.0-beta.44"
edition = "2021"

[dependencies]
colossus-auth = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.8.0" }
colossus-extract = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.8.0" }
# ## Rust Learning: Git dependency with feature flags
#
# `colossus-rag` lives in the same monorepo (colossus-rs) as colossus-auth.
# `features = ["full"]` enables all backends: Qdrant, fastembed, Neo4j.
colossus-rag = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.8.0", features = ["full"] }
colossus-pdf = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.8.0" }
colossus-graph = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.8.0", features = ["neo4j"] }
axum = { version = "0.7", features = ["multipart"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
neo4rs = "0.8"
dotenvy = "0.15"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
# Downgraded from 5 to 4 to resolve `ort` version conflict with rig-fastembed.
# fastembed 5 needs ort 2.0.0-rc.11, rig-fastembed needs ort 2.0.0-rc.9.
# Both use the same NomicEmbedTextV15 model — API is compatible.
fastembed = "4"
# rig-fastembed and qdrant-client are used in main.rs to construct the
# QdrantRetriever for the RAG pipeline. They come transitively via colossus-rag
# but we need them as direct deps to use their types in our binary.
rig-fastembed = "0.3"
qdrant-client = { version = "1.14", default-features = false }
rig-core = "0.33"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
anyhow = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
