[package]
name = "colossus-legal-backend"
version = "2.0.0-beta.321"
edition = "2021"

[dependencies]
colossus-auth = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.15.0" }
colossus-extract = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.15.0" }
# ## Rust Learning: Git dependency with feature flags
#
# `colossus-rag` lives in the same monorepo (colossus-rs) as colossus-auth.
# `features = ["full"]` enables all backends: Qdrant, fastembed, Neo4j.
colossus-rag = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.15.0", features = ["full"] }
colossus-pdf = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.15.0" }
colossus-graph = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.15.0", features = ["neo4j"] }
colossus-pipeline = { git = "https://github.com/rhrywnak/colossus-rs.git", tag = "v0.15.0" }
axum = { version = "0.7", features = ["multipart"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
neo4rs = "0.8"
dotenvy = "0.15"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
# Downgraded from 5 to 4 to resolve `ort` version conflict with rig-fastembed.
# fastembed 5 needs ort 2.0.0-rc.11, rig-fastembed needs ort 2.0.0-rc.9.
# Both use the same NomicEmbedTextV15 model — API is compatible.
fastembed = "4"
# rig-fastembed and qdrant-client are used in main.rs to construct the
# QdrantRetriever for the RAG pipeline. They come transitively via colossus-rag
# but we need them as direct deps to use their types in our binary.
rig-fastembed = "0.3"
qdrant-client = { version = "1.14", default-features = false }
# === Pipeline Replacement: Restate + Rig (Phase 1) ===
# Durable Execution Engine SDK — used to orchestrate long-running, fault-tolerant
# pipeline steps with deterministic replay.
restate-sdk = "0.6"

# LLM Framework — upgraded from 0.33 to 0.36 for the Restate-driven pipeline.
# `derive` feature enables the procedural macros used by rig's tool/agent traits.
rig-core = { version = "0.36", features = ["derive"] }

# Renamed direct dep on reqwest 0.13 — required to satisfy
# `rig::http_client::HttpClientExt`, which Rig 0.36 implements ONLY for the
# 0.13 reqwest Client type. The backend's primary HTTP client stays on
# reqwest 0.12 (see the `reqwest` entry below); this `reqwest_13` alias
# exists exclusively so `backend/src/pipeline/rig_provider.rs` can build a
# custom `.http1_only()` client and hand it to Rig via
# `ClientBuilder::http_client(...)`. Without this, Rig defaults to its own
# HTTP/2-capable client and api.anthropic.com hangs inside Podman containers.
# Features are intentionally minimal — TLS, charset, system-proxy, and http2
# are already enabled on the same reqwest 0.13 instance via rig-core's
# default features (cargo unifies features across all consumers).
reqwest_13 = { version = "0.13", package = "reqwest" }
reqwest = { version = "0.12", features = ["json", "native-tls", "multipart"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
anyhow = "1"
llm_json = "1"
backon = { version = "1", features = ["tokio-sleep"] }
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

[dev-dependencies]
# Used by chunking_strategies tests to validate that strategy-emitted
# boundary_pattern strings are valid regular expressions and match the
# expected document structures (e.g. ORDER / FINDINGS OF FACT / OPINION
# headings in court rulings). Strategies themselves only emit the regex
# *string* — runtime compilation lives in colossus-extract — so `regex`
# is a test-only dependency here.
regex = "1"
